tests/issues-OLD/test289.expected
Error: syntax error, parens needed around operator ':-', tests/issues-OLD/test289.pl:2
