tests/issues-OLD/test289.pl
main :-
	X = write(a:-b), nl.

:- initialization(main).
